# light-curve

./: .gitmodules  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  README.md
light-curve/: Cargo.toml
light-curve-common/: Cargo.toml
light-curve-common/src/: allclose.rs  lib.rs  linspace.rs  sort_multiple.rs
light-curve-dmdt/: CHANGELOG.md  Cargo.toml  README.md
light-curve-dmdt/.ci/: compose-readme.py  readme-example.sh
light-curve-dmdt/benches/: cond_prob.rs  erf.rs  gausses.rs  grid.rs  lib.rs
light-curve-dmdt/src/: erf.rs  float_trait.rs  lib.rs
light-curve-feature/: CHANGELOG.md  Cargo.toml  README.md  katex-header.html
light-curve-feature/benches/: extractor.rs  fft_crates.rs  fit.rs  lib.rs  peak_indices.rs  periodogram.rs  recurrent_sin_cos.rs  statistics.rs
light-curve-feature/examples/: plot_snia_curve_fits.rs
light-curve-feature/src/: antifeatures.rs  error.rs  evaluator.rs  extractor.rs  feature.rs  features.rs  fft.rs  fit.rs  float_trait.rs  lib.rs  lnerfc.rs  macros.rs  peak_indices.rs  periodogram.rs  prelude.rs  sorted_array.rs  sorted_vec.rs  statistics.rs  straight_line_fit.rs  tests.rs  time_series.rs  types.rs
light-curve-feature/src/antifeatures/: duration.rs  maximum_time_interval.rs  minimum_time_interval.rs  mod.rs  observation_count.rs  time_mean.rs  time_standard_deviation.rs
light-curve-feature/src/features/: amplitude.rs  anderson_darling_normal.rs  bazin_fit.rs  beyond_n_std.rs  bins.rs  cusum.rs  duration.rs  eta.rs  eta_e.rs  excess_variance.rs  inter_percentile_range.rs  kurtosis.rs  linear_fit.rs  linear_trend.rs  magnitude_percentage_ratio.rs  maximum_slope.rs  maximum_time_interval.rs  mean.rs  mean_variance.rs  median.rs  median_absolute_deviation.rs  median_buffer_range_percentage.rs  minimum_time_interval.rs  mod.rs  observation_count.rs  percent_amplitude.rs  percent_difference_magnitude_percentile.rs  periodogram.rs  reduced_chi2.rs  skew.rs  standard_deviation.rs  stetson_k.rs  time_mean.rs  time_standard_deviation.rs  villar_fit.rs  weighted_mean.rs
light-curve-feature/src/features/antifeatures/: duration.rs  maximum_time_interval.rs  minimum_time_interval.rs  mod.rs  observation_count.rs  time_mean.rs  time_standard_deviation.rs
light-curve-feature/src/fit/: curve_fit.rs  data.rs  mod.rs  nls.rs  straight_line.rs
light-curve-feature/src/nl_fit/: curve_fit.rs  data.rs  evaluator.rs  lmsder.rs  mcmc.rs  mod.rs
light-curve-feature/src/nl_fit/prior/: ln_prior.rs  ln_prior_1d.rs  mod.rs
light-curve-feature/src/periodogram/: fft.rs  fft_thread_local.rs  freq.rs  mod.rs  power.rs  power_direct.rs  power_fft.rs  power_trait.rs  recurrent_sin_cos.rs
light-curve-feature/test-util/: Cargo.toml
light-curve-feature/test-util/src/: lc_data.rs  lib.rs
light-curve-interpol/: Cargo.toml
light-curve-interpol/benches/: lib.rs
light-curve-interpol/src/: lib.rs
light-curve-python/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
light-curve-python/docs/: conf.py
light-curve-python/src/: arr_wrapper.rs  cont_array.rs  dmdt.rs  features.rs  lib.rs  np_array.rs  sorted.rs
light-curve-python/tests/: test.py  test_dmdt.py  test_feature.py  test_w_bench.py
light-curve/src/: lib.rs
python/: .gitignore  Cargo.toml  README.md  feature_tests.ipynb  pyproject.toml  setup.cfg  setup.py
python/docs/: .gitignore  index.rst
python/light-curve/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
python/light-curve-python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
python/light-curve/light_curve/: __init__.py
python/light-curve/light_curve/light_curve_py/: __init__.py  warnings.py
python/light-curve/light_curve/light_curve_py/features/: __init__.py  _base.py  _base_meta.py  adnormal.py  amplitude.py  beyondnstd.py  bins.py  cusum.py  eta.py  etae.py  excvar.py  extractor.py  mean.py  (+23 more)
python/light-curve/src/: check.rs  dmdt.rs  errors.rs  features.rs  lib.rs  sorted.rs
python/light-curve/tests/: test_w_bench.py
python/light-curve/tests/light_curve_ext/: test_dmdt.py  test_feature.py
python/light-curve/tests/light_curve_py/: test_adnormal.py  test_amplitude.py  test_beyondnstd.py  test_bins.py  test_call.py  test_cusum.py  test_eta.py  test_etae.py  test_excvar.py  test_extractor.py  test_intpercrange.py  test_kurtosis.py  test_linfit.py  test_lintrend.py  test_magnpratio.py  test_maxslope.py  test_mean.py  test_meanvar.py  test_medabsdev.py  test_n_not_det_before_df.py  test_n_not_det_before_fd.py  test_otsu.py  test_otsusplit.py  test_percampl.py  test_plateau.py  test_redchi2.py  test_skew.py  test_stdev.py  test_stetsonj.py  test_stetsonk.py  test_weightmean.py
python/light_curve/: __init__.py
python/light_curve/features/: amplitude.py  cusum.py  kurtosis.py  skew.py
python/light_curve/light_curve_py/features/: plateau.py
python/light_curve_pure/: __init__.py  lstsq.py
python/light_curve_pure/features/: __init__.py  _base.py  adnormal.py  amplitude.py  cusum.py  eta.py  etae.py  excvar.py  extractor.py  intpercrange.py  linfit.py  lintrend.py  maxslope.py  mean.py  meanvar.py  medbufrperc.py  otsu.py  pdiffmperc.py  percampl.py  redchi2.py  skew.py  stdev.py  weightmean.py
python/src/: features.rs  lib.rs
python/tests/: test.py  test_adnormal.py  test_amplitude.py  test_beyondnstd.py  test_bins.py  test_cusum.py  test_eta.py  test_etae.py  test_excvar.py  test_extract.py  test_feature.py  test_intpercrange.py  test_kurtosis.py  test_linfit.py  test_lintrend.py  test_magnpratio.py  test_maxslope.py  test_mean.py  test_meanvar.py  test_medabsdev.py  test_medbufrperc.py  test_median.py  test_otsu.py  test_pdiffmperc.py  test_percampl.py  test_plateau.py  test_redchi2.py  test_skew.py  test_stdev.py  test_stetsonk.py  test_w_bench.py  test_weightmean.py
python/tests/light_curve_ext/: test_feature.py
python/tests/light_curve_py/: test_cusum.py  test_excvar.py  test_extract.py  test_lintrend.py  test_maxslope.py  test_meanvar.py  test_medabsdev.py  test_medbufrperc.py  test_median.py  test_pdiffmperc.py  test_redchi2.py  test_skew.py
(+6 files in other folders)
