[package]
name = "light-curve-common"
version = "0.1.1-beta.0"
description = "Common tools for light-curve-* packages"
repository = "https://github.com/hombit/light-curve"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
num-traits = "0.2"
conv = "0.3"

