[package]
name = "light-curve-dmdt"
version = "0.1.0"
description = "dm-dt maps generator"
repository = "https://github.com/hombit/light-curve"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "light_curve_dmdt"
path = "src/lib.rs"

[[bin]]
name = "dmdt"
path = "src/bin/main.rs"

[dependencies]
clap = "^2.33.3"
conv = "^0.3.3"
itertools = "^0.10.0"
libm = "^0.2.1"
ndarray = "^0.14.0"
num-traits = "^0.2.14"
png = "^0.16.8"
thiserror = "^1.0.24"
