[package]
name = "light-curve-dmdt"
version = "0.3.0-beta.3"
description = "dm-dt maps generator"
repository = "https://github.com/hombit/light-curve"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "light_curve_dmdt"
path = "src/lib.rs"
bench = false

[[bin]]
name = "dmdt"
path = "src/bin/main.rs"

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false

[dependencies]
clap = "^2.33.3"
conv = "^0.3.3"
dyn-clonable = "^0.9.0"
enumflags2 = "^0.7.1"
itertools = "^0.10.0"
libm = "^0.2.1" # erf
ndarray = "^0.14.0"
num-traits = "^0.2.14"
png = "^0.16.8"
thiserror = "^1.0.24"

[dev-dependencies]
approx = "^0.4.0"
criterion = "^0.3"
libm = "^0.2.1"
mathru = "^0.9.0"
special = "^0.8.1"
static_assertions = "^1.1.0"
