[package]
name = "light-curve-feature"
version = "0.2.0-beta.5"
description = "Feature extractor from noisy time series"
repository = "https://github.com/hombit/light-curve"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[lib]
bench = false

[features]
default = ["fftw-source"]
fftw-system = ["fftw/system"]
fftw-source = ["fftw/source"]
fftw-mkl = ["fftw/intel-mkl"]

[dependencies]
conv = "0.3"
dyn-clonable = "~0.9.0"
fftw = { version = "~0.6.1", default-features = false }
itertools = "~0.9.0"
lazy_static = "~1.4.0"
libm = "^0.2.1"
light-curve-common = "0.1.0"
num-complex = "0.2"
num-traits = "0.2"
thiserror = "^1.0"
unzip3 = "^1.0"

[dev-dependencies]
rand = "~0.7"
rand_distr = "~0.2"
criterion = "~0.3"
rustfft = "~3.0"
chfft = "~0.3.4"

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html",
]
no-default-features = true
features = ["fftw-system"]
