[package]
name = "light-curve-feature"
version = "0.3.3-beta.0"
description = "Feature extractor from noisy time series"
repository = "https://github.com/light-curve/light-curve"
readme = "README.md"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[lib]
bench = false

[features]
default = ["fftw-source"]
fftw-system = ["fftw/system"]
fftw-source = ["fftw/source"]
fftw-mkl = ["fftw/intel-mkl"]
gsl = ["GSL/v2_1"]

[dependencies]
conv = "^0.3.3"
dyn-clonable = "^0.9.0"
emcee = "^0.3.0"
emcee_rand = { version = "^0.3.15", package = "rand" }
enum_dispatch = "^0.3.7"
fftw = { version = "0.7.0", default-features = false }
GSL = { version = "~4.0.0", default-features = false, optional = true }
itertools = "^0.10.0"
lazy_static = "^1.4.0"
libm = "~0.2.1"
light-curve-common = "0.1.0"
macro_const = "0.1.0"
ndarray = "^0.15.3"
ndarray-stats = "^0.5"
num-complex = "^0.3"
num-traits = "^0.2"
schemars = "^0.8.3"
serde = { version = "^1.0", features = ["derive"] }
thiserror = "^1.0"
thread_local = "^1.1"
unzip3 = "^1.0"

[dev-dependencies]
light-curve-feature = { path = ".", default-features = false, features = ["gsl"] }
light-curve-feature-test-util = { path = "test-util" }
rand = "^0.7"
rand_distr = "^0.2"
criterion = "^0.3"
chfft = "^0.3.4"
realfft= "^1.1"
rustfft = "^5.0"
serde_json = "^1.0"
serde_test = "^1.0"
serde_type_name = "0.2.0"
approx = "^0.5"
hyperdual = "^0.4.2"
plotters = { version = "^0.3.1", default-features = false, features = ["errorbar", "line_series", "ttf"] }
plotters-bitmap = "^0.3.1"
clap = "3.0.0-beta.2"
rayon = "~1.5.1"

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex-header.html",
]
no-default-features = true
features = ["fftw-system", "gsl"]
