[package]
name = "light-curve-interpol"
version = "0.1.1"
description = "Interpolations tools for time series"
repository = "https://github.com/light-curve/light-curve"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
num-traits = "0.2"
conv = "0.3"

[dev-dependencies]
criterion = "0.2"
light-curve-common = "0.1.0"

[[bench]]
name = "benchmark"
path = "benches/lib.rs"
harness = false
