[package]
name = "light-curve-python"
version = "0.2.6-beta.1"
edition = "2018"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
description = "Feature extractor from noisy time series"
repository = "https://github.com/hombit/light-curve"
license = "GPL-3.0-or-later"

[lib]
name = "light_curve"
crate-type = ["cdylib"]

[features]
default = ["fftw-static"]
fftw-static = ["light-curve-feature/fftw-source"]
fftw-dynamic = ["light-curve-feature/fftw-system"]
mkl = ["light-curve-feature/fftw-mkl"]
nonlinear-fit = ["light-curve-feature/gsl"]

[dependencies]
conv = "^0.3.3"
enumflags2 = "^0.7.1"
itertools = "~0.10"
light-curve-dmdt = "0.3.0"
ndarray = { version = "^0.14.0", features = ["rayon"] }
numpy = "^0.13"
num_cpus = "^1.13.0"
num-traits = "^0.2"
rand = "^0.8.3"
rand_xoshiro = "^0.6.0"
rayon = "^1.5.0"
thiserror = "^1.0.24"
unzip3 = "1.0.0"

[dependencies.light-curve-feature]
version = "0.2.2"
default_features = false

[dependencies.pyo3]
version = "^0.13"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["numpy"]
classifier = ["Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Rust", "Topic :: Scientific/Engineering :: Astronomy"]
