[package]
name = "light-curve-python"
version = "0.1.3"
edition = "2018"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
description = "Feature extractor from noisy time series"
repository = "https://github.com/hombit/light-curve"
license = "GPL-3.0-or-later"

[lib]
name = "light_curve"
crate-type = ["cdylib"]

[features]
default = ["fftw-static"]
fftw-static = ["light-curve-feature/fftw-source"]
fftw-dynamic = ["light-curve-feature/fftw-system"]
mkl-dynamic = ["light-curve-feature/fftw-mkl"]

[dependencies]
numpy = "~0.8"

[dependencies.light-curve-feature]
path = "../light-curve-feature"
version = "0.1.16"
default_features = false

[dependencies.pyo3]
version = "~0.9"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["numpy"]
classifier = ["Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Rust", "Topic :: Scientific/Engineering :: Astronomy"]
