[package]
name = "light-curve-python"
version = "0.1.9-beta.1"
edition = "2018"
authors = ["Konstantin Malanchev <hombit@gmail.com>"]
description = "Feature extractor from noisy time series"
repository = "https://github.com/hombit/light-curve"
license = "GPL-3.0-or-later"

[lib]
name = "light_curve"
crate-type = ["cdylib"]

[features]
default = ["fftw-static"]
fftw-static = ["light-curve-feature/fftw-source"]
fftw-dynamic = ["light-curve-feature/fftw-system"]
mkl-dynamic = ["light-curve-feature/fftw-mkl"]

[dependencies]
ndarray = "~0.13.1"
numpy = "~0.11"

[dependencies.light-curve-feature]
version = "0.1.21"
default_features = false

[dependencies.pyo3]
version = "~0.11"
features = ["extension-module"]

[package.metadata.maturin]
requires-dist = ["numpy"]
classifier = ["Intended Audience :: Science/Research", "License :: OSI Approved :: MIT License", "Programming Language :: Python", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Rust", "Topic :: Scientific/Engineering :: Astronomy"]
