[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.py$'

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py36,py37,py38,py39
isolated_build = True

[testenv]
deps =
    pytest
commands = pytest
"""
