[build-system]
requires = ["maturin >= 0.8.0"]
build-backend = "maturin"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.py$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --import-mode=append --benchmark-min-time=0.1 --benchmark-max-time=5.0 --benchmark-sort=mean --benchmark-disable"
testpaths = [
    "tests/",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38,py39
isolated_build = True

[testenv]
deps =
    pytest
    pytest-benchmark
    numpy
    scipy
    feets
commands = pytest
"""
