[metadata]
name = light-curve
version = attr: light_curve_pure.__version__
description = Light curve feature extraction
long_description = file: README.md
keywords = astrophysics, astronomy, timeseries, time-series, light-curve, lightcurve
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # Programming Language :: Rust
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    numpy
    scipy

[options.packages.find]
exclude =
    tests
