[metadata]
name = light-curve-python
author = Konstantin Malanchev
author_email = hombit@gmail.com
description = An alias to light-curve package
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/hombit/light-curve
license = MIT
keywords = science, astrophysics
classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/
