[package]
name = "light-curve-python"
version = "0.5.2"
authors = ["Konstantin Malanchev <hombit@gmail.com>", "Anastasia Lavrukhina <lavrukhina.ad@gmail.com>"]
description = "Feature extractor from noisy time series"
readme = "README.md"
repository = "https://github.com/light-curve/light-curve"
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.56"

[lib]
name = "light_curve"
crate-type = ["cdylib"]

[features]
default = ["fftw-static", "gsl"]
fftw-static = ["light-curve-feature/fftw-source"]
fftw-dynamic = ["light-curve-feature/fftw-system"]
mkl = ["light-curve-feature/fftw-mkl"]
gsl = ["light-curve-feature/gsl"]

[dependencies]
# it is a dependency of intel-mkl-tool, we pin it to temporary solve
# https://github.com/rust-math/intel-mkl-src/issues/68
anyhow = "<1.0.49"
const_format = "^0.2.17"
conv = "^0.3.3"
enumflags2 = "^0.7.1"
itertools = "~0.10.1"
light-curve-dmdt = "0.4.0"
ndarray = { version = "^0.15.3", features = ["rayon"] }
numpy = "~0.15.0"
num_cpus = "^1.13.0"
num-traits = "^0.2"
rand = "^0.8.3"
rand_xoshiro = "^0.6.0"
rayon = "^1.5.0"
thiserror = "^1.0.24"
unzip3 = "1.0.0"

[dependencies.light-curve-feature]
version = "0.4.1"
default_features = false

[dependencies.pyo3]
version = "^0.15.1"
features = ["extension-module"]
